--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 <div class="container home-img">
   <div class="row">
     <div class="col">
-      <div class="jumbotron home-jmbo">
+      <div class="jumbotron home-jmbo animated fadeInUp">
         <h1><span class="title-a">check</span><span class="title-b">mirrors</span></h1>
         <h2>York & Leeds School of Motoring</h2>
         <hr class="my-4">
@@ -26,9 +26,10 @@ layout: default
   <div class="container">
     <div class="row">
       <div class="col">
-        <p><span class="title-a">check</span><span class="title-b">mirrors</span> is a new school of motoring.  We pride ourselves on offering a professional, high standard service that puts the pupil first.</p>
+        <p class="lead"><span class="title-a">check</span><span class="title-b">mirrors</span> is a new school of motoring.  We pride ourselves on offering a professional, high standard service that puts the pupil first.</p>
       </div>
     </div>
+    {% include social.html %}
   </div>
 </section>
 
