--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
         <h2>York & Leeds School of Motoring</h2>
         <hr class="my-4">
         <p class="lead">
-          <a class="btn btn-primary btn-lg" href="{{ site.github.url }}/#" role="button">Learn to Drive</a>
+          <a class="btn btn-primary btn-lg" href="tel:07821291783" role="button"><i class="fa fa-phone" data-wow-delay=".1s"></i> Call to Book</a>
         </p>
       </div>
     </div>
