new home page content

--- a/index.html
+++ b/index.html
@@ -25,11 +25,19 @@ layout: default
 <section class="home-details">
   <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col col-xs-12">
         <p class="lead"><span class="title-a">check</span><span class="title-b">mirrors</span> is a new school of motoring.  We pride ourselves on offering a professional, high standard service that puts the pupil first.</p>
       </div>
+      <div class="col col-xs-12">
+        <h3>Learn to drive with confidence</h3>
+      <ul class="home-features">
+        <li>Fully qualified ADI instructors</li>
+        <li>Safe and Calm Environment</li>
+        <li>Flexible around you</li>
+        <li>York & Leeds</li>
+      </ul>
+      </div>
     </div>
-    {% include social.html %}
   </div>
 </section>
 
@@ -69,3 +77,7 @@ layout: default
     </div>
   </div>
 </div>
+
+<!-- Cards End -->
+
+{% include about.html %}
