--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ layout: default
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col">
+    <div class="col-md-4 col-xs-12">
       <div class="card">
         <img class="card-img-top" src="{{ site.github.url }}/img/card-1.jpg" alt="Our fleet">
         <div class="card-block">
@@ -55,7 +55,7 @@ layout: default
         </div>
       </div>
     </div>
-    <div class="col">
+    <div class="col-md-4 col-xs-12">
       <div class="card">
         <img class="card-img-top" src="{{ site.github.url }}/img/card-2.jpeg" alt="Card image cap">
         <div class="card-block">
@@ -65,7 +65,7 @@ layout: default
         </div>
       </div>
     </div>
-    <div class="col">
+    <div class="col-md-4 col-xs-12">
       <div class="card">
         <img class="card-img-top" src="{{ site.github.url }}/img/card-3.jpg" alt="Card image cap">
         <div class="card-block">
