--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@ layout: default
   <div class="container">
     <div class="row">
       <div class="col col-xs-12">
-        <p class="lead"><span class="title-a">check</span><span class="title-b">mirrors</span> is a new school of motoring.  We pride ourselves on offering a professional, high standard service that puts the pupil first.</p>
-      </div>
-      <div class="col col-xs-12">
         <h3>Learn to drive with confidence</h3>
       <ul class="home-features">
         <li>Fully qualified ADI instructors</li>
@@ -37,6 +34,10 @@ layout: default
         <li>York & Leeds</li>
       </ul>
       </div>
+      <div class="col col-xs-12">
+        <p class="lead"><span class="title-a">check</span><span class="title-b">mirrors</span> is an established school of motoring.  We pride ourselves on offering a professional, high standard service that puts the pupil first.</p>
+      </div>
+
     </div>
   </div>
 </section>
@@ -49,9 +50,13 @@ layout: default
       <div class="card">
         <img class="card-img-top" src="{{ site.github.url }}/img/card-1.jpg" alt="Our fleet">
         <div class="card-block">
-          <h4 class="card-title">Card title</h4>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary btn-block">Go somewhere</a>
+          <h4 class="card-title">Learn to Drive</h4>
+          <p class="card-text">
+            <li>Flexible times to suit</li>
+            <li>Acreditted instructors</li>
+            <li>Only £25 per lessoon</li>
+          </p>
+          <a href="/lessons" class="btn btn-primary btn-block">Learn to drive</a>
         </div>
       </div>
     </div>
