--- a/lessons.html
+++ b/lessons.html
@@ -3,3 +3,31 @@ layout: default
 title: Lessons
 permalink: /lessons
 ---
+<section class="lessons-title">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <h2>Book your first lessons with <span class="title-a">check</span><span class="title-b">mirrors</span></h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="lessons-lessons">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <ul class="list-group">
+          <li class="list-group-item active">Starter Pack</li>
+          <li class="list-group-item">10 Lessons Included</li>
+          <li class="list-group-item">ADI Instructor</li>
+          <li class="list-group-item">Only £240</li>
+          <li class="list-group-item"><button class="btn btn-primary btn-block">Book Now</button></li>
+        </ul>
+      </div>
+      <div class="col"></div>
+      <div class="col"></div>
+    </div>
+  </div>
+</section>
