--- a/lessons.html
+++ b/lessons.html
@@ -19,15 +19,30 @@ permalink: /lessons
     <div class="row">
       <div class="col">
         <ul class="list-group">
-          <li class="list-group-item active">Starter Pack</li>
+          <li class="list-group-item active"><h3>Starter Pack</h3></li>
           <li class="list-group-item">10 Lessons Included</li>
           <li class="list-group-item">ADI Instructor</li>
           <li class="list-group-item">Only £240</li>
-          <li class="list-group-item"><button class="btn btn-primary btn-block">Book Now</button></li>
+          <li class="list-group-item"><a href="{{ site.github.url }}/contact/" class="btn btn-primary btn-block" >Book Now</a></li>
         </ul>
       </div>
-      <div class="col"></div>
-      <div class="col"></div>
+      <div class="col">
+        <ul class="list-group">
+          <li class="list-group-item active"><h3>By the Hour</h3></li>
+          <li class="list-group-item">All the perks of our starter pack at a fixed hourly rate</li>
+          <li class="list-group-item">Only £25 per hour</li>
+          <li class="list-group-item"><a href="{{ site.github.url }}/contact/" class="btn btn-primary btn-block" >Book Now</a></li>
+        </ul>
+      </div>
+      <div class="col">
+        <ul class="list-group">
+          <li class="list-group-item active"><h3>Pass Plus</h3></li>
+          <li class="list-group-item">Extend your knowledge and skills</li>
+          <li class="list-group-item">Lower you insurance premium</li>
+          <li class="list-group-item">Full course only £180</li>
+          <li class="list-group-item"><a href="{{ site.github.url }}/contact/" class="btn btn-primary btn-block" >Book Now</a></li>
+        </ul>
+      </div>
     </div>
   </div>
 </section>
