--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ title: Check Mirrors
         <p class="lead">
           <a class="btn btn-primary btn-lg" href="tel:07821291783" role="button"><i class="fa fa-phone" data-wow-delay=".1s"></i> Call to Book</a>
         </p>
+        {% include fb-share.html %}
       </div>
     </div>
   </div>
@@ -53,9 +54,11 @@ title: Check Mirrors
         <div class="card-block">
           <h4 class="card-title">Learn to Drive</h4>
           <p class="card-text">
+            <ul>
             <li>Flexible times to suit</li>
             <li>Acreditted instructors</li>
             <li>Only £25 per lessoon</li>
+          </ul>
           </p>
           <a href="/lessons" class="btn btn-primary btn-block">Learn to drive</a>
         </div>
@@ -75,9 +78,15 @@ title: Check Mirrors
       <div class="card">
         <img class="card-img-top" src="{{ site.github.url }}/img/card-3.jpg" alt="Card image cap">
         <div class="card-block">
-          <h4 class="card-title">Card title</h4>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary btn-block">Go somewhere</a>
+          <h4 class="card-title">Become an Instructor</h4>
+          <p class="card-text">
+            <ul>
+              <li>Flexible working hours</li>
+              <li>self-employment</li>
+              <li>regular pupil referrals</li>
+            </ul>
+          </p>
+          <a href="{{ site.github.url }}/become-an-instructor/" class="btn btn-primary btn-block">Learn more</a>
         </div>
       </div>
     </div>
