--- a/lessons.html
+++ b/lessons.html
@@ -3,6 +3,22 @@ layout: default
 title: Lessons
 permalink: /lessons
 ---
+
+<!-- Page Intro -->
+
+<div class="container lessons-img">
+  <div class="row">
+    <div class="col"></div>
+    <div class="col-9">
+      <div class="page-title">
+        <h1>{{ page.title }}</h1>
+      </div>
+    </div>
+    <div class="col"></div>
+  </div>
+</div>
+
+<!-- Intro End -->
 <section class="lessons-title">
   <div class="container">
     <div class="row">
