--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,8 @@ permalink: /contact/
 
 <div class="container">
   <div class="row">
-<div class="col"></div>
-    <div class="col-6">
+<div class="col-xs-0 col-md-3"></div>
+    <div class="col-xs-12 col-md-6">
       <form method="POST" action="http://formspree.io/YOUREMAILHERE">
         <h2>Get in touch!</h2>
         <p class="lead">To start your journey, please complete the form below and we will contact you as soon as possible.</p>
@@ -51,6 +51,6 @@ permalink: /contact/
         <input type="hidden" name="_next" value="//site.io/thanks.html" />
       </form>
     </div>
-<div class="col"></div>
+<div class="col-xs-0 col-md-3"></div>
   </div>
 </div>
