Our Instructors page

--- a/become-an-instructor.html
+++ b/become-an-instructor.html
@@ -23,7 +23,7 @@ permalink: /become-an-instructor/
 <div class="container">
   <div class="row">
     <div class="col-md-4 col-xs-12">
-      <img src="{{ site.github.url }}/img/instructor-image.jpg" class="about-image" alt="insert alt">
+      <img src="{{ site.github.url }}/img/instructor-image.jpg" class="about-image" alt="Instructor trainer Nick">
     </div>
     <div class="col-md-8 col-xs-12">
       <h2>Become a driving instructor</h2>
