--- a/index.html
+++ b/index.html
@@ -68,8 +68,14 @@ title: Check Mirrors
       <div class="card">
         <img class="card-img-top" src="{{ site.github.url }}/img/card-2.jpeg" alt="Card image cap">
         <div class="card-block">
-          <h4 class="card-title">Card title</h4>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h4 class="card-title">Interesting Card</h4>
+          <p class="card-text">
+            <ul>
+              <li>Point 1</li>
+              <li>Point 2</li>
+              <li>Point 3</li>
+            </ul> 
+          </p>
           <a href="#" class="btn btn-primary btn-block">Go somewhere</a>
         </div>
       </div>
