--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Check Mirrors
+tags: [driving, instructor, York, Leeds]
 ---
 
 <!-- Page Intro -->
@@ -74,7 +75,7 @@ title: Check Mirrors
               <li>Point 1</li>
               <li>Point 2</li>
               <li>Point 3</li>
-            </ul> 
+            </ul>
           </p>
           <a href="#" class="btn btn-primary btn-block">Go somewhere</a>
         </div>
