--- a/become-an-instructor.html
+++ b/become-an-instructor.html
@@ -2,6 +2,7 @@
 layout: default
 title: Become An Instructor
 permalink: /become-an-instructor/
+tags: [driving, instructor, york, leeds, school, motoring, learn, drive, trainee, teach]
 ---
 <!-- Page Intro -->
 
