--- a/lessons.html
+++ b/lessons.html
@@ -2,6 +2,7 @@
 layout: default
 title: Lessons
 permalink: /lessons
+tags: [driving, instructor, lessons, york, leeds, school, motoring, learn, drive]
 ---
 
 <!-- Page Intro -->
