--- a/our-trainees.html
+++ b/our-trainees.html
@@ -2,6 +2,7 @@
 layout: default
 title: Our Trainees
 permalink: /our-trainees/
+tags: [driving, instructor, lessons, york, leeds, school, motoring, learn, drive, trainees]
 ---
 <!-- Page Intro -->
 
