--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 layout: default
 title: Contact
 permalink: /contact/
+tags: [driving, instructor, lessons, york, leeds, school, motoring, learn, drive, contact]
 ---
 
 <!-- Page Intro -->
