--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Check Mirrors
-tags: [driving, instructor, York, Leeds]
+tags: [driving, instructor, lessons, york, leeds, school, motoring, learn, drive]
 ---
 
 <!-- Page Intro -->
