--- a/our-instructors.html
+++ b/our-instructors.html
@@ -2,6 +2,7 @@
 layout: default
 title: Our Instructors
 permalink: /our-instructors/
+tags: [driving, instructor, lessons, york, leeds, school, motoring, learn, drive]
 ---
 <!-- Page Intro -->
 
