--- a/testimonials-17.html
+++ b/testimonials-17.html
@@ -2,6 +2,7 @@
 layout: default
 title: Testimonials
 permalink: testimonials/
+tags: [driving, instructor, lessons, york, leeds, school, motoring, learn, drive, testimonials]
 ---
 
 <div id="fb-root"></div>
