--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ tags: [driving, instructor, lessons, york, leeds, school, motoring, learn, drive
         <li>Fully qualified ADI instructors</li>
         <li>Safe and Calm Environment</li>
         <li>Flexible around you</li>
-        <li>York & Leeds</li>
+        <li>York, Leeds & Wakefield</li>
       </ul>
       </div>
       <div class="col col-xs-12">
@@ -57,8 +57,8 @@ tags: [driving, instructor, lessons, york, leeds, school, motoring, learn, drive
           <p class="card-text">
             <ul>
             <li>Flexible times to suit</li>
-            <li>Acreditted instructors</li>
-            <li>Only £25 per lessoon</li>
+            <li>Accreditted instructors</li>
+            <li>Only £25 per lesson</li>
           </ul>
           </p>
           <a href="/lessons" class="btn btn-primary btn-block">Learn to drive</a>
