check in for minors chnges to wordings

--- a/become-an-instructor.html
+++ b/become-an-instructor.html
@@ -2,7 +2,7 @@
 layout: default
 title: Become An Instructor
 permalink: /become-an-instructor/
-tags: [driving, instructor, york, leeds, school, motoring, learn, drive, trainee, teach]
+tags: [driving, instructor, york, leeds, school, motoring, learn, drive, trainee, teach, checkmirrors, check, mirrors]
 ---
 <!-- Page Intro -->
 
