--- a/our-instructors.html
+++ b/our-instructors.html
@@ -29,8 +29,8 @@ tags: [driving, instructor, lessons, york, leeds, school, motoring, learn, drive
         </div>
         <div class="col-md-8 col-xs-12">
           <h2>Sarah Hellowell</h2>
-          <p>Sarah is the co founder of checkmirrors.</p>
-          <p>She is an ADI with qualifications that include The Diamond Special Test, Pass Plus and Cardington Special Test. She has been a fully qualified instructor for over 10 years and takes pride in offering a professional, calm and safe environment
+          <p>Sarah is the founder of checkmirrors.</p>
+          <p>She is an ADI with qualifications that include The Diamond Special Test, Pass Plus and Cardington Special Test. She has been a fully qualified instructor for over 14 years and takes pride in offering a professional, calm and safe environment
             that will help you pass your test.</p>
         </div>
     </div>
@@ -41,7 +41,7 @@ tags: [driving, instructor, lessons, york, leeds, school, motoring, learn, drive
         </div>
         <div class="col-md-8 col-xs-12">
           <h2>Rob Kedge</h2>
-          <p>Rob has 10 years experience as an ADI. He is a patient and friendly instructor able to adapt to teaching methods to suit each indivdual person. As well as an ADI Rob is a Pass Plus and Fleet trainer.</p>
+          <p>Rob has 14 years experience as an ADI. He is a patient and friendly instructor able to adapt to teaching methods to suit each indivdual person. As well as an ADI Rob is a Pass Plus and Fleet trainer.</p>
         </div>
     </div>
     <div class="row inst-image">
