new pages and accred details

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ tags:
         <h3>Learn to drive with confidence</h3>
       <ul class="home-features">
         <li>Fully qualified ADI instructors</li>
-        <li>Safe and Calm Environment</li>
+        <li>Pass Plus Available</li>
         <li>Flexible around you</li>
         <li>York, Leeds & Wakefield</li>
       </ul>
