--- a/lessons-2.html
+++ b/lessons-2.html
@@ -33,8 +33,8 @@ tags:
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <h2>Book your first lessons with <span class="title-a">check</span><span class="title-b">mirrors</span></h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <h2>Learn to drive with <span class="title-a">check</span><span class="title-b">mirrors</span> school of motoring</h2>
+        <p class="lead">Why choose us? We are flexible, friendly and professional with over 15 years experience, putting you, our pupil first guiding you to success.</p>
 
       </div>
     </div>
@@ -49,7 +49,7 @@ tags:
           <img class="card-img" src="http://via.placeholder.com/350x150" alt="Card image">
           <div class="card-img-overlay">
             <h4 class="card-title">Learn with an ADI Instructor</h4>
-            <p class="card-text">All of our instructors are ADI certified, approved by the DVSA to the highest standar.</p>
+            <p class="card-text lead">All our instructors are DVSA approved.</p>
           </div>
         </div>
       </div>
@@ -58,7 +58,7 @@ tags:
           <img class="card-img" src="http://via.placeholder.com/350x150" alt="Card image">
           <div class="card-img-overlay">
             <h4 class="card-title">Learn in York, Leeds or Wakefield</h4>
-            <p class="card-text">We now have instructors in York, Leeds & Wakefield</p>
+            <p class="card-text lead">We now have instructors in York, Leeds & Wakefield</p>
           </div>
         </div>
       </div>
@@ -68,8 +68,8 @@ tags:
         <div class="card bg-dark text-white text-center">
           <img class="card-img" src="http://via.placeholder.com/350x150" alt="Card image">
           <div class="card-img-overlay">
-            <h4 class="card-title">Learn with an ADI Instructor</h4>
-            <p class="card-text">All of our instructors are ADI certified, approved by the DVSA to the highest standar.</p>
+            <h4 class="card-title">Safe and Calm Environment</h4>
+            <p class="card-text lead">We know how nerve wracking it is to learn to drive, so we take care to make you as comfortable as possible.</p>
           </div>
         </div>
       </div>
@@ -78,7 +78,7 @@ tags:
           <img class="card-img" src="http://via.placeholder.com/350x150" alt="Card image">
           <div class="card-img-overlay">
             <h4 class="card-title">Learn with an ADI Instructor</h4>
-            <p class="card-text">All of our instructors are ADI certified, approved by the DVSA to the highest standar.</p>
+            <p class="card-text lead">All of our instructors are ADI certified, approved by the DVSA to the highest standar.</p>
           </div>
         </div>
       </div>
