New contact form

--- a/lessons-2.html
+++ b/lessons-2.html
@@ -35,7 +35,9 @@ tags:
       <div class="col-12">
         <h2>Learn to drive with <span class="title-a">check</span><span class="title-b">mirrors</span> school of motoring</h2>
         <p class="lead">Why choose us? We are flexible, friendly and professional with over 15 years experience, putting you, our pupil first guiding you to success.</p>
-
+        <div style="text-align: center;">
+        <h3>Book from only £25 per hour or 10 lessons for £240</h3>
+        <a class="btn btn-primary typeform-share button" href="https://naaman10.typeform.com/to/gek77r" data-mode="drawer_right" target="_blank">Book Now</a></div>
       </div>
     </div>
   </div>
