Lessons update and new content on other pages too

--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@ tags:
       <div class="card">
         <img class="card-img-top" src="{{ site.github.url }}/img/card-2.jpeg" alt="Card image cap">
         <div class="card-block">
-          <h4 class="card-title">Interesting Card</h4>
+          <h4 class="card-title">Pass Plus</h4>
           <p class="card-text">
             <ul>
-              <li>Point 1</li>
-              <li>Point 2</li>
-              <li>Point 3</li>
+              <li>Excellent for new drivers</li>
+              <li>Lower you insurance premium</li>
+              <li>Safe driving for life</li>
             </ul>
           </p>
-          <a href="#" class="btn btn-primary btn-block">Go somewhere</a>
+          <a href="{{ site.github.url }}/passplus" class="btn btn-primary btn-block">Learn More</a>
         </div>
       </div>
     </div>
