--- a/lessons.html
+++ b/lessons.html
@@ -1,6 +1,6 @@
 ---
 title: Lessons
-permalink: "/lessons"
+permalink: "/lessons/"
 layout: default
 tags:
 - driving
@@ -33,41 +33,56 @@ tags:
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <h2>Book your first lessons with <span class="title-a">check</span><span class="title-b">mirrors</span></h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h2>Learn to drive with <span class="title-a">check</span><span class="title-b">mirrors</span> school of motoring</h2>
+        <p class="lead">Why choose us? We are flexible, friendly and professional with over 15 years experience, putting you, our pupil first guiding you to success.</p>
+        <div style="text-align: center;">
+        <h3>Book from only £25 per hour or 10 lessons for £240</h3>
+        <a class="btn btn-primary btn-lg typeform-share button" href="https://naaman10.typeform.com/to/gek77r" data-mode="drawer_right" target="_blank">Book Now</a></div>
       </div>
     </div>
   </div>
 </section>
 
-<section class="lessons-lessons">
+<section class="lessons-2">
   <div class="container">
     <div class="row">
       <div class="col">
-        <ul class="list-group">
-          <li class="list-group-item active"><h3>Starter Pack</h3></li>
-          <li class="list-group-item">10 Lessons Included</li>
-          <li class="list-group-item">ADI Instructor</li>
-          <li class="list-group-item">Only £240</li>
-          <li class="list-group-item"><a href="{{ site.github.url }}/contact/" class="btn btn-primary btn-block" >Book Now</a></li>
-        </ul>
+        <div class="card bg-dark text-white text-center">
+          <img class="card-img" src="{{ site.github.url }}/img/lessons-1-350x150.jpg" width="100%" alt="checkmirrors cars">
+          <div class="card-img-overlay">
+            <h4 class="card-title">Learn with an ADI Instructor</h4>
+            <p class="card-text lead">All our instructors are DVSA approved.</p>
+          </div>
+        </div>
       </div>
       <div class="col">
-        <ul class="list-group">
-          <li class="list-group-item active"><h3>By the Hour</h3></li>
-          <li class="list-group-item">All the perks of our starter pack at a fixed hourly rate</li>
-          <li class="list-group-item">Only £25 per hour</li>
-          <li class="list-group-item"><a href="{{ site.github.url }}/contact/" class="btn btn-primary btn-block" >Book Now</a></li>
-        </ul>
+        <div class="card bg-dark text-white text-center">
+          <img class="card-img" src="{{ site.github.url }}/img/lessons-1-350x150.jpg" width="100%" alt="Card image">
+          <div class="card-img-overlay">
+            <h4 class="card-title">Learn in York, Leeds or Wakefield</h4>
+            <p class="card-text lead">We now have instructors in York, Leeds & Wakefield</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <div class="card bg-dark text-white text-center">
+          <img class="card-img" src="{{ site.github.url }}/img/lessons-1-350x150.jpg" width="100%" alt="Card image">
+          <div class="card-img-overlay">
+            <h4 class="card-title">Safe and Calm Environment</h4>
+            <p class="card-text lead">We know how nerve wracking it is to learn to drive, so we take care to make you as comfortable as possible.</p>
+          </div>
+        </div>
       </div>
       <div class="col">
-        <ul class="list-group">
-          <li class="list-group-item active"><h3>Pass Plus</h3></li>
-          <li class="list-group-item">Extend your knowledge and skills</li>
-          <li class="list-group-item">Lower you insurance premium</li>
-          <li class="list-group-item">Full course only £180</li>
-          <li class="list-group-item"><a href="{{ site.github.url }}/contact/" class="btn btn-primary btn-block" >Book Now</a></li>
-        </ul>
+        <div class="card bg-dark text-white text-center">
+          <img class="card-img" src="{{ site.github.url }}/img/lessons-1-350x150.jpg" width="100%" alt="Card image">
+          <div class="card-img-overlay">
+            <h4 class="card-title">Learn with an ADI Instructor</h4>
+            <p class="card-text lead">All of our instructors are ADI certified, approved by the DVSA to the highest standar.</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
