--- a/our-trainees.html
+++ b/our-trainees.html
@@ -40,6 +40,16 @@ tags:
     <div class="col-md-8 col-xs-12">
       <h2>Ryan Fawcett</h2>
       <p>Ryan joined checkmirrors in February 2017 and is currently Training with our Instructor Nick. Ryan is a post graduate of York St Johns University and studied Business Management. </p>
+      <h3>What Ryan says...</h3>
+      <blockquote class="blockquote">
+        <p class="mb-0">"It's brilliant quality that covers all areas of training provided by an experienced instructor "</p>
+      </blockquote>
+      <blockquote class="blockquote">
+        <p class="mb-0">"fantastic value for money and I've learnt so much being a part of this training"</p>
+      </blockquote>
+      <blockquote class="blockquote">
+        <p class="mb-0">"with the quality of training I'm getting it will make me an exceptional instructor in the near future"</p>
+      </blockquote>
     </div>
 
   </div>
