--- a/pass-plus.html
+++ b/pass-plus.html
@@ -34,6 +34,7 @@ tags:
 <!-- Intro End -->
 
 <!-- What is Pass Plus -->
+
 <section class="lessons-title">
   <div class="container">
     <div class="row">
@@ -48,6 +49,7 @@ tags:
 <!-- What is end -->
 
 <!-- Pass Plus syllabus -->
+
 <section>
   <div class="container">
     <div class="row">
@@ -55,17 +57,36 @@ tags:
         <img src="{{ site.github.url }}/img/pass-plus.png">
       </div>
       <div class="col-md-8">
-<h3>The Pass Plus syllabus with <span class="title-a">check</span><span class="title-b">mirrors</span></h3>
-<ul class="home-features">
-  <li>Module 1: Introduction (Part 1)</li>
-  <li>Module 1: Town driving (Part 2)</li>
-  <li>Module 2: All-weather driving</li>
-  <li>Module 3: Out of town driving & rural roads</li>
-  <li>Module 4: Night driving</li>
-  <li>Module 5: Dual carriageways</li>
-  <li>Module 6: Motorways</li>
-</ul>
-<p>When you have successfully completed the course, you will be issued with a Certificate of Completion.</p>
-</div>
-  </section>
+        <h3>The Pass Plus syllabus with <span class="title-a">check</span><span class="title-b">mirrors</span></h3>
+        <ul class="home-features">
+          <li>Module 1: Introduction (Part 1)</li>
+          <li>Module 1: Town driving (Part 2)</li>
+          <li>Module 2: All-weather driving</li>
+          <li>Module 3: Out of town driving & rural roads</li>
+          <li>Module 4: Night driving</li>
+          <li>Module 5: Dual carriageways</li>
+          <li>Module 6: Motorways</li>
+        </ul>
+        <p>When you have successfully completed the course, you will be issued with a Certificate of Completion.</p>
+      </div>
+</section>
+
 <!-- Syllabus end -->
+
+<!-- Pass Plus price -->
+
+<section class="passplus-price">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="jumbotron home-jmbo animated fadeInUp">
+          <h2>Entire Pass Plus Course Only £180</h2>
+            <a class="btn btn-primary btn-lg typeform-share button" href="https://naaman10.typeform.com/to/gek77r" data-mode="drawer_right" target="_blank">Book Now</a></div>
+          </p
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Pass Plus Price End -->
