--- a/lessons.html
+++ b/lessons.html
@@ -46,18 +46,18 @@ tags:
 <section class="lessons-2">
   <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col-xs-12 col-md-6">
         <div class="card bg-dark text-white text-center">
-          <img class="card-img" src="{{ site.github.url }}/img/lessons-1-350x150.jpg" width="100%" alt="checkmirrors cars">
+          <img class="card-img" src="{{ site.github.url }}/img/lessons-3-350x150.jpg" width="100%" alt="checkmirrors cars">
           <div class="card-img-overlay">
-            <h4 class="card-title">Learn with an ADI Instructor</h4>
-            <p class="card-text lead">All our instructors are DVSA approved.</p>
+            <h4 class="card-title">Available for all Levels of Experience</h4>
+            <p class="card-text lead">Just turned 17 and starting out or in need of some refresher lessons, we will help you get on the road.</p>
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col-xs-12 col-md-6">
         <div class="card bg-dark text-white text-center">
-          <img class="card-img" src="{{ site.github.url }}/img/lessons-1-350x150.jpg" width="100%" alt="Card image">
+          <img class="card-img" src="{{ site.github.url }}/img/lessons-2-350x150.jpg" width="100%" alt="Card image">
           <div class="card-img-overlay">
             <h4 class="card-title">Learn in York, Leeds or Wakefield</h4>
             <p class="card-text lead">We now have instructors in York, Leeds & Wakefield</p>
@@ -66,21 +66,21 @@ tags:
       </div>
     </div>
     <div class="row">
-      <div class="col">
+      <div class="col-xs-12 col-md-6">
         <div class="card bg-dark text-white text-center">
-          <img class="card-img" src="{{ site.github.url }}/img/lessons-1-350x150.jpg" width="100%" alt="Card image">
+          <img class="card-img" src="{{ site.github.url }}/img/lessons-4-350x150.jpeg" width="100%" alt="Card image">
           <div class="card-img-overlay">
             <h4 class="card-title">Safe and Calm Environment</h4>
             <p class="card-text lead">We know how nerve wracking it is to learn to drive, so we take care to make you as comfortable as possible.</p>
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col-xs-12 col-md-6">
         <div class="card bg-dark text-white text-center">
           <img class="card-img" src="{{ site.github.url }}/img/lessons-1-350x150.jpg" width="100%" alt="Card image">
           <div class="card-img-overlay">
             <h4 class="card-title">Learn with an ADI Instructor</h4>
-            <p class="card-text lead">All of our instructors are ADI certified, approved by the DVSA to the highest standar.</p>
+            <p class="card-text lead">All of our instructors are ADI certified, approved by the DVSA to the highest standard.</p>
           </div>
         </div>
       </div>
