new bullet order and NHS

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ tags:
 - motoring
 - learn
 - drive
+- NHS
 ---
 
 <!-- Page Intro -->
@@ -40,10 +41,11 @@ tags:
       <div class="col col-xs-12">
         <h3>Learn to drive with confidence</h3>
       <ul class="home-features">
+        <li>York, Leeds & Wakefield</li>
         <li>Fully qualified ADI instructors</li>
         <li>Pass Plus Available</li>
         <li>Flexible around you</li>
-        <li>York, Leeds & Wakefield</li>
+        <li>NHS discount available</li>
       </ul>
       </div>
       <div class="col col-xs-12">
