--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: Check Mirrors
+title: Driving Instructor York | checkmirrors
 layout: default
 tags:
 - driving
@@ -21,7 +21,7 @@ tags:
     <div class="col">
       <div class="jumbotron home-jmbo animated fadeInUp">
         <h1><span class="title-a">check</span><span class="title-b">mirrors</span></h1>
-        <h2>York, Leeds & Wakefield School of Motoring</h2>
+        <h2>Driving instructors in York, Leeds & Wakefield</h2>
         <hr class="my-4">
         <p class="lead">
           <a class="btn btn-primary btn-lg" href="tel:07821291783" role="button"><i class="fa fa-phone" data-wow-delay=".1s"></i> Call to Book</a>
