added the new location specific pages with menu updates and meta updates

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ tags:
       <div class="col col-xs-12">
         <h3>Learn to drive with confidence</h3>
       <ul class="home-features">
-        <li>York, Leeds & Wakefield</li>
+        <li><a href="/driving-lessons-york">York,</a><a href="/driving-lessons-leeds"> Leeds &</a><a href="/driving-lessons-wakefield"> Wakefield</a></li>
         <li>Fully qualified ADI instructors</li>
         <li>Pass Plus Available</li>
         <li>Flexible around you</li>
