--- a/lessons-leeds.html
+++ b/lessons-leeds.html
@@ -1,17 +1,17 @@
 ---
-title: Lessons
-permalink: "/lessons/"
+title: Driving Lessons in Leeds
+permalink: "/driving-lessons-leeds/"
 layout: default
 tags:
 - driving
 - instructor
 - lessons
-- york
 - leeds
 - school
 - motoring
 - learn
 - drive
+location: Leeds
 ---
 
 <!-- Page Intro -->
@@ -34,10 +34,13 @@ tags:
     <div class="row">
       <div class="col-12">
         <h2>Learn to drive with <span class="title-a">check</span><span class="title-b">mirrors</span> school of motoring</h2>
-        <p class="lead">Why choose us? We are flexible, friendly and professional with over 15 years experience, putting you, our pupil first guiding you to success.</p>
+        <p class="lead">Looking for driving lessons in {{ page.location }}? Look no further, checkmirrors offer flexible, friendly and professional driving lessons in {{ page.location }} and the surrounding areas.
+
+Our driving instructors in {{ page.location }} have over 15 years experience, putting you, our pupil first guiding you to success.
+</p>
         <div style="text-align: center;">
         <h3>Book from only £25 per hour or 10 lessons for £240</h3>
-        <a class="btn btn-primary btn-lg typeform-share button" href="https://naaman10.typeform.com/to/gek77r" data-mode="drawer_right" target="_blank">Book Now</a></div>
+        <a class="btn btn-primary btn-lg typeform-share button" href="https://naaman10.typeform.com/to/pksUdo" data-mode="drawer_right" target="_blank">Book Now</a></div>
       </div>
     </div>
   </div>
