Meta description update - uses yaml

--- a/lessons-leeds.html
+++ b/lessons-leeds.html
@@ -2,6 +2,7 @@
 title: Driving Lessons in Leeds
 permalink: "/driving-lessons-leeds/"
 layout: default
+description: Leeds driving lessons & driving instructors, checkmirrors, based in Yorkshire with over 14 years experience. Book today from just £25 per hour with Pass Plus options available in Leeds.
 tags:
 - driving
 - instructor
