--- a/lessons-wakefield.html
+++ b/lessons-wakefield.html
@@ -2,6 +2,7 @@
 title: Driving Lessons in Wakefield
 permalink: "/driving-lessons-wakefield/"
 layout: default
+description: Wakefield driving lessons & driving instructors, checkmirrors, based in Yorkshire with over 14 years experience. Book today from just £25 per hour with Pass Plus options available in Wakefield.
 tags:
 - driving
 - instructor
