--- a/become-an-instructor.html
+++ b/become-an-instructor.html
@@ -6,7 +6,6 @@ tags:
 - driving
 - instructor
 - york
-- leeds
 - school
 - motoring
 - learn
@@ -38,7 +37,7 @@ tags:
   <div class="container">
     <div class="row">
       <div class="col-md-4 col-xs-12">
-        <img src="{{ site.github.url }}/img/instructor-image.jpg" class="about-image" alt="Instructor trainer Nick">
+        <img src="{{ site.github.url }}/img/instructor-image.jpg" class="about-image" alt="Instructor's Car Keys">
       </div>
       <div class="col-md-8 col-xs-12">
         <h2>What you need to Consider When Becoming a Driving Instructor</h2>
@@ -70,8 +69,8 @@ tags:
           <li>You will get referrals from us at a cost of £65 a week.</li>
 
         </ul>
-        <p>He can cater for different learning styles tailoring courses around individual needs using proven techniques in teaching, instructing and coaching. Training is available in the Leeds and York areas with potential to work around other local areas.
-          Nick is patient, professional, flexible with times and days for lessons; and uses a modern tuition vehicle equipped with dual controls.</p>
+        <p>We can cater for different learning styles tailoring courses around individual needs using proven techniques in teaching, instructing and coaching. Training is available in the Leeds and York areas with potential to work around other local areas.
+          We are patient, professional, flexible with times and days for lessons; and uses a modern tuition vehicle equipped with dual controls.</p>
         <p>Please call to discuss:</p>
         <a href="tel:07821291783" class="btn btn-primary btn-lg"><i class="fa fa-phone" data-wow-delay=".1s"></i> 07821 291783</a> or <a class="btn btn-primary btn-lg typeform-share button" href="https://naaman10.typeform.com/to/cw3mg7" data-mode="drawer_right" style="display:inline-block;" target="_blank">Contact us</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
       </div>
