--- a/404.html
+++ b/404.html
@@ -1,5 +1,6 @@
 ---
 title: '404'
+permalink: /404/
 layout: default
 tags:
 - driving
@@ -22,6 +23,7 @@ tags:
         <div class="panel-body not-found">
           <p>L</p>
         </div>
+        <h1>Sorry, that page does not exist.</h1>
       </div>
 
     </div>
