New Year update

--- a/our-instructors.html
+++ b/our-instructors.html
@@ -60,7 +60,7 @@ tags:
         </div>
         <div class="col-md-8 col-xs-12">
           <h2>Ryan Fawcett</h2>
-          <p></p>
+          <p>Ryan is a Business Management graduate who has spent 5 years in sales before deciding to become a qualified driving instructor in York. Ryan enjoys working with all ages and thrives on the challenge and success of helping people pass their tests.</p>
         </div>
     </div>
 </section>
