--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ tags:
 
 <!-- Home Page Cards -->
 
-<div class="container-fluid">
+<div class="container">
   <div class="row">
     <div class="col-md-4 col-xs-12">
       <div class="card">
