--- a/lessons-york.html
+++ b/lessons-york.html
@@ -16,17 +16,17 @@ location: York
 
 <!-- Page Intro -->
 
-<div class="container lessons-img">
-  <div class="row">
-    <div class="col"></div>
-    <div class="col-9">
-      <div class="page-title">
-        <h1>{{ page.title }}</h1>
+<section class="lessons-img">
+  <div class="container">
+    <div class="row">
+      <div class="col-9">
+        <div class="page-title">
+          <h1>{{ page.title }}</h1>
+        </div>
       </div>
     </div>
-    <div class="col"></div>
   </div>
-</div>
+</section>
 
 <!-- Intro End -->
 <section class="lessons-title">
