--- a/pass-plus.html
+++ b/pass-plus.html
@@ -17,18 +17,18 @@ tags:
 ---
 
 <!-- Page Intro -->
-
-<div class="container passpluss-img">
-  <div class="row">
-    <div class="col"></div>
-    <div class="col-9">
-      <div class="page-title">
-        <h1>{{ page.title }}</h1>
+<section class="passpluss-img">
+  <div class="container">
+    <div class="row">
+      <div class="col-9">
+        <div class="page-title">
+          <h1>{{ page.title }}</h1>
+        </div>
       </div>
     </div>
-    <div class="col"></div>
   </div>
-</div>
+</section>
+
 
 <!-- Intro End -->
 
