--- a/testimonials-17.html
+++ b/testimonials-17.html
@@ -24,19 +24,43 @@ tags:
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
-<div class="container testimonal-img">
-  <div class="row">
-    <div class="col"></div>
-    <div class="col-9">
-      <div class="page-title">
-        <h1>{{ page.title }}</h1>
+<section class="testimonal-img">
+  <div class="container">
+    <div class="row">
+      <div class="col-9">
+        <div class="page-title">
+          <h1>{{ page.title }}</h1>
+        </div>
       </div>
     </div>
-    <div class="col"></div>
+  </div>
+</section>
+
+  <div class="container">
+    <div class="row align-items-center">
+  <div class="col-md-12 test-year">
+    <h2>2018</h2>
+    <p class="lead">Some text here to say something like...</p>
+    <p class="lead">Don't just take our word for it!</p>
   </div>
 </div>
-
-  <div class="container-fluid">
+<div class="row">
+  {% for post in site.posts %}
+    {% if post.year == 2018 %}
+  <div class="col-md-4 col-xs-12">
+    <div class="card testimonial-card">
+      <img class="card-img-top" src="{{ site.github.url }}{{ post.img-url_image_path }}" alt="Our fleet">
+      <div class="card-block">
+        <h4 class="card-title">{{ post.title }}</h4>
+        <p class="card-text">
+          {{ post.date | date_to_long_string }}
+        </p>
+          <div class="fb-share-button" data-href="{{ site.github.url}}/{{ post.url }}" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse">Share</a></div>
+      </div>
+    </div>
+  </div>
+  {% endif %}
+  {% endfor %}
     <div class="row">
       <div class="col"></div>
       {% for post in site.posts %}
