--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ tags:
               <li>Only {{ site.pricePerLesson }} per lesson</li>
             </ul>
           </p>
-          <a href="/lessons" class="btn btn-primary btn-block">Learn More</a>
+          <a href="{{ site.github.url }}/driving-lessons-york/" class="btn btn-primary btn-block">Learn More</a>
         </div>
       </div>
     </div>
