Sarah did everything and is responsible for all future success. Pls teach me how to drive???

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@ tags:
 ---
 
 <!-- Page Intro -->
-
 <section class="home-img">
 <div class="container">
   <div class="row">
@@ -22,10 +21,11 @@ tags:
       <div class="home-jmbo animated fadeInUp">
         <h1><span class="title-a">check</span><span class="title-b">mirrors</span></h1>
         <h2>Driving instructors in York</h2>
+        <p class="lead">As an established school of motoring we pride ourselves on offering a professional, high standard service that always puts the pupil first.</p>
         <hr class="my-4">
 
         <p class="lead">
-          <a class="btn btn-primary btn-lg" href="tel:07821291783" role="button"><i class="fa fa-phone" data-wow-delay=".1s"></i> Call to Book</a>
+          <a class="btn btn-primary btn-lg btn-responsive" href="tel:07821291783" role="button"><i class="fa fa-phone" data-wow-delay=".1s"></i> Call to Book</a> or <button class="btn btn-primary btn-lg btn-responsive" data-toggle="modal" data-target="#bookFormModal">Book Online</button>
         </p>
         {% include fb-share.html %}
       </div>
@@ -51,7 +51,13 @@ tags:
         </ul>
       </div>
       <div class="col col-xs-12">
-        <p class="lead"><span class="title-a">check</span><span class="title-b">mirrors</span> is an established school of motoring.  We pride ourselves on offering a professional, high standard service that puts the pupil first.</p>
+        <h3>Become a Driving Instructor</h3>
+        <ul class="home-features">
+          <li><i class="fas fa-check"></i> Become ADI Qualified</a></li>
+          <li><i class="fas fa-check"></i> One to one tuition</li>
+          <li><i class="fas fa-check"></i> Tailoured to suit you</li>
+          <li><i class="fas fa-check"></i> Set your own hours</li>
+        </ul>
       </div>
 
     </div>
