Adjustments to homepage links

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ tags:
 ---
 
 <!-- Page Intro -->
-<section class="home-img">
+<section class="home-img p-8">
 <div class="container">
   <div class="row">
     <div class="col">
@@ -48,6 +48,7 @@ tags:
           <li><i class="fas fa-check"></i> Pass Plus Available</li>
           <li><i class="fas fa-check"></i> Flexible around you</li>
           <li><i class="fas fa-check"></i> NHS discount available</li>
+          <a href="{{site.github.url}}/driving-lessons-york" class="btn btn-link">Find out more</a>
         </ul>
       </div>
       <div class="col col-xs-12">
@@ -57,6 +58,7 @@ tags:
           <li><i class="fas fa-check"></i> One to one tuition</li>
           <li><i class="fas fa-check"></i> Tailoured to suit you</li>
           <li><i class="fas fa-check"></i> Set your own hours</li>
+          <a href="{{site.github.url}}/become-an-instructor" class="btn btn-link">Find out more</a>
         </ul>
       </div>
 
