--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@ tags:
 
 <!-- Home Details -->
 <section class="home-details">
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
-      <div class="col col-xs-12">
+      <div class="col-12 col-md-6">
         <h3>Learn to drive with confidence</h3>
         <ul class="home-features">
           <li><i class="fas fa-check"></i> Learn to drive in <a href="/driving-lessons-york">York</a></li>
@@ -48,7 +48,7 @@ tags:
           <li><i class="fas fa-check"></i> Pass Plus Available</li>
           <li><i class="fas fa-check"></i> Flexible around you</li>
           <li><i class="fas fa-check"></i> NHS discount available</li>
-          <a href="{{site.github.url}}/driving-lessons-york" class="btn btn-link">Find out more</a>
+          <a href="{{site.github.url}}/driving-lessons-york" class="btn btn-secondary">Find out more</a>
         </ul>
       </div>
       <div class="col col-xs-12">
@@ -58,7 +58,7 @@ tags:
           <li><i class="fas fa-check"></i> One to one tuition</li>
           <li><i class="fas fa-check"></i> Tailoured to suit you</li>
           <li><i class="fas fa-check"></i> Set your own hours</li>
-          <a href="{{site.github.url}}/become-an-instructor" class="btn btn-link">Find out more</a>
+          <a href="{{site.github.url}}/become-an-instructor" class="btn btn-secondary">Find out more</a>
         </ul>
       </div>
 
@@ -94,7 +94,7 @@ tags:
           <p class="card-text">
             <ul>
               <li>Excellent for new drivers</li>
-              <li>Lower you insurance premium</li>
+              <li>Lower your insurance premium</li>
               <li>Safe driving for life</li>
             </ul>
           </p>
