--- a/lessons-york.html
+++ b/lessons-york.html
@@ -40,7 +40,7 @@ Our driving instructors in {{ page.location }} have over 15 years experience, pu
 </p>
         <div style="text-align: center;">
         <h3>Book from only £26 per hour or 10 lessons for £250</h3>
-        <a class="btn btn-primary btn-lg typeform-share button" href="https://naaman10.typeform.com/to/y2l4S0" data-mode="drawer_right" target="_blank">Book Now</a></div>
+        <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#bookFormModal">Book Now</button></div>
       </div>
     </div>
   </div>
