--- a/pass-plus.html
+++ b/pass-plus.html
@@ -32,6 +32,37 @@ tags:
 
 <!-- Intro End -->
 
+<!-- Testimonial -->
+
+<section id="ppTestimonial" class="pt-5">
+  <div class="container">
+    <div class="row text-center text-md-left">
+      <div class="col-12 col-md-6 mb-5 d-md-flex justify-content-between">
+        <div class="avatar mb-md-0 mb-4 mx-4">
+          <img src="{{site.github.url}}/img/passpluss1.JPG" class="rounded z-depth-1" alt="Sample avatar">
+        </div>
+        <div class="mx-4">
+          <h4 class="font-weight-bold mb-3">Kishori Young</h4>
+          <!-- <h6 class="font-weight-bold mb-3">Passed: </h6> -->
+          <p class="">Check out Kishori, she earned her PassPlus with checkmirrors and is now winning!</p>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 mb-5 d-md-flex justify-content-between">
+        <div class="avatar mb-md-0 mb-4 mx-4">
+          <img src="{{site.github.url}}/img/ToriaLeedale.JPG" class="rounded z-depth-1" alt="Sample avatar">
+        </div>
+        <div class="mx-4">
+          <h4 class="font-weight-bold mb-3">Toria Leedale</h4>
+          <!-- <h6 class="font-weight-bold mb-3">Passed: </h6> -->
+          <p class="">Toria passed with checkmirrors and now has lower a insurance premium.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Testimonial end -->
+
 <!-- What is Pass Plus -->
 
 <section class="lessons-title">
@@ -80,7 +111,7 @@ tags:
       <div class="col">
         <div class="jumbotron home-jmbo animated fadeInUp">
           <h2>Entire Pass Plus Course Only £180</h2>
-            <a class="btn btn-primary btn-lg typeform-share button" href="https://naaman10.typeform.com/to/gek77r" data-mode="drawer_right" target="_blank">Book Now</a></div>
+            <button class="btn btn-primary btn-lg btn-responsive" data-toggle="modal" data-target="#bookFormModal">Book Now</button></div>
           </p
         </div>
       </div>
