--- a/testimonials-17.html
+++ b/testimonials-17.html
@@ -2,7 +2,6 @@
 title: Testimonials
 permalink: "/testimonials/"
 layout: default
-category: Testimonial
 tags:
 - driving
 - instructor
@@ -53,16 +52,15 @@ tags:
 <div class="container">
   <div class="row align-items-center">
     <div class="col-md-12 test-year">
-      <h2>2018</h2>
-      <p class="lead">Don't just take our word for it!</p>
+      <h2 class="mb-3">Don't just take our word for it!</h2>
     </div>
   </div>
-  <div class="row">
+  <div class="row mt-3">
     {% for post in site.posts %}
-    {% if post.year == 2018 %}
+
     <div class="col-md-4 col-xs-12">
       <div class="card testimonial-card">
-        <img class="card-img-top" src="{{ post.image }}" alt="{{post.title}}">
+        <img class="card-img-top" src="{{ post.image }}{{post.img-url}}" alt="{{post.title}}">
         <div class="card-block">
           <h4 class="card-title">{{ post.title }}</h4>
           <p class="card-text">
@@ -72,31 +70,6 @@ tags:
         </div>
       </div>
     </div>
-    {% endif %}
+
     {% endfor %}
   </div>
-  <div class="row align-items-center">
-    <div class="col-md-12">
-      <h2 class="test-year">2017</h2>
-    </div>
-  </div>
-  <div class="row">
-    {% for post in site.posts %}
-    {% if post.year != 2018 %}
-    <div class="col-md-4 col-xs-12">
-      <div class="card testimonial-card">
-        <img class="card-img-top" src="{{ post.img-url }}" alt="Our fleet">
-        <div class="card-block">
-          <h4 class="card-title">{{ post.title }}</h4>
-          <p class="card-text">
-            {{ post.date | date_to_long_string }}
-          </p>
-          <div class="fb-share-button" data-href="{{ site.github.url}}/{{ post.url }}" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse">Share</a></div>
-        </div>
-      </div>
-    </div>
-    {% endif %}
-    {% endfor %}
-    <div class="col"></div>
-  </div>
-</div>
