--- a/become-an-instructor.html
+++ b/become-an-instructor.html
@@ -1,10 +1,13 @@
 ---
-title: Become An Instructor
+title: Become an Instructor
 permalink: "/become-an-instructor/"
+description: Become an ADI qualified Driving Instructor in the York area with Check Mirrors
 layout: default
 tags:
 - driving
 - instructor
+- adi
+- ordit
 - york
 - school
 - motoring
@@ -18,63 +21,112 @@ tags:
 ---
 
 <!-- Page Intro -->
-
-<section class="instructor-img">
+<section class="plain-intro primary-color">
   <div class="container">
-    <div class="row">
-      <div class="col-9">
+    <div class="row align-items-center">
+      <div class="col-12 col-md-6">
         <div class="page-title">
-          <h1>{{ page.title }}</h1>
+          <h1>{{ page.title }} with the <span class="title-a">check</span><span class="title-b">mirrors</span> family</h1>
         </div>
       </div>
     </div>
   </div>
 </section>
-
 <!-- Intro End -->
 
-<section>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4 col-xs-12">
-        <img src="{{ site.github.url }}/img/instructor-image.jpg" class="about-image" alt="Instructor's Car Keys">
+<section class="container mb-4" id="become-check">
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-4">
+      <div class="row">
+        <div class="col-1 namo">
+          <i class="fas fa-pound-sign fa-lg"></i>
+        </div>
+        <div class="col-xl-10 col-md-11 col-10">
+          <h5 class="mb-3">Earn up to £40k per year</h5>
+        </div>
       </div>
-      <div class="col-md-8 col-xs-12">
-        <h2>What you need to Consider When Becoming a Driving Instructor</h2>
-        <p>Here are some few things you will need to consider before deciding to become a driving instructor with Checkmirrors School of Motoring. After considering them please contact us and we are more than happy to meet to discuss even further and for you to talk to one of our qualified instructors.
-        </p>
-        <ul>
-          <li>Checkmirrors offers personal one to one tuition that is tailored to suit you. We do not send you out of area nor do we put you on block booked courses that are not flexible to meet you.</li>
-          <li>We charge £28 per full hour of instruction. There are no upfront costs and you can take the lessons to suit you.</li>
-          <li>There are 3 parts to the test:
-            <ul>
-              <li>Part 1 – theory. You will need to buy the disc and spend time on your own learning the theory. We know that if you spend time on this the chances of passing first time are increased. Out instructor can offer you some support to help you
-                understand the theory. The fee to take your test as of November 2016 is £81.</li>
-              <li>Part 2 – practice – This is a taught element and the fee for the test as of November 2016 is £111.</li>
-              <li>Part 3 – practice – This is a taught element and the fee for the test as of November 2016 is £111.</li>
-            </ul>
-          </li>
-          <li>On average it takes 20 taught lessons to pass part 2 and 40 lessons to pass part 3.</li>
-          <li>You get 3 attempts only to pass part 2 and 3.</li>
-          <li>You will need to have a DBS check when you first register.</li>
-          <li>You have to pay a fee to join the ADI register, get a trainee licence and renew your registration every 4 years. The fee to register is £300 and the trainees licence is £140. These are one off costs. Every 4 years you will need to pay £300 for
-            re-registration.</li>
-          <li>Information on fees can be found at <a href="https://www.gov.uk/approved-driving-instructor-adi-fees">gov.uk</a> </li>
-          <li>Once you have got your PDI (learner licence) you can teach pupils. You will need to have a minimum of 20 taught hours before you get fully qualified.</li>
-          <li>You will need insurance as an instructor. The costs will vary and depend on your car, like any other insurance. However one of our instructors pays approx £400 a year.</li>
-          <li>You will need to own your own car which must be clean and in good order.</li>
-          <li>You will need to have dual controls fitted. The cost will depend on your car but ranges between £300-£400.</li>
-          <li>We do not lock you into any contract once you have passed your test. However we expect you to work with us for a minimum of 12 months.</li>
-          <li>Full livery, company t-shirts and promotional merchandise is provided free.</li>
-          <li>You will get referrals from us at a cost of £65 a week.</li>
-
-        </ul>
-        <p>We can cater for different learning styles tailoring courses around individual needs using proven techniques in teaching, instructing and coaching. Training is available in the Leeds and York areas with potential to work around other local areas.
-          We are patient, professional, flexible with times and days for lessons; and uses a modern tuition vehicle equipped with dual controls.</p>
-        <p>Please call to discuss:</p>
-        <a href="tel:07821291783" class="btn btn-primary btn-lg"><i class="fa fa-phone" data-wow-delay=".1s"></i> 07821 291783</a> or <a class="btn btn-primary btn-lg typeform-share button" href="https://naaman10.typeform.com/to/cw3mg7" data-mode="drawer_right" style="display:inline-block;" target="_blank">Contact us</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+      <div class="row">
+        <div class="col-1 namo">
+          <i class="fas fa-user-tie fa-lg"></i>
+        </div>
+        <div class="col-xl-10 col-md-11 col-10">
+          <h5 class="mb-3">Be your own boss</h5>
+        </div>
       </div>
-
+      <div class="row">
+        <div class="col-1 namo">
+          <i class="fas fa-graduation-cap fa-lg"></i>
+        </div>
+        <div class="col-xl-10 col-md-11 col-10">
+          <h5 class="mb-3">One to One training in your area</h5>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1 namo">
+          <i class="fas fa-thumbs-up fa-lg"></i>
+        </div>
+        <div class="col-xl-10 col-md-11 col-10">
+          <h5 class="mb-3">No upfront payments, pay as you go</h5>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1 namo">
+          <i class="fas fa-file-signature fa-lg"></i>
+        </div>
+        <div class="col-xl-10 col-md-11 col-10">
+          <h5 class="mb-3">No contract fee or hidden costs</h5>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1 namo">
+          <i class="fas fa-car fa-lg"></i>
+        </div>
+        <div class="col-xl-10 col-md-11 col-10">
+          <h5 class="mb-3">Free livery</h5>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1 namo">
+          <i class="fas fa-pencil-ruler fa-lg"></i>
+        </div>
+        <div class="col-xl-10 col-md-11 col-10">
+          <h5 class="mb-3">Free stationary</h5>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1 namo">
+          <i class="fas fa-tshirt fa-lg"></i>
+        </div>
+        <div class="col-xl-10 col-md-11 col-10">
+          <h5 class="mb-3">Free shirts and fleece</h5>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1 namo">
+          <i class="fas fa-phone-volume fa-lg"></i>
+        </div>
+        <div class="col-xl-10 col-md-11 col-10">
+          <h5 class="mb-3">100% support</h5>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1 namo">
+          <i class="fas fa-beer fa-lg"></i>
+        </div>
+        <div class="col-xl-10 col-md-11 col-10">
+          <h5 class="mb-3">Team days out</h5>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-md-6">
+      <h3>Become a Driving Instructor with checkmirrors</h3>
+      <img src="{{ site.github.url }}/img/become-instructor-img.jpg" class="img-fluid">
+      <p>Whether you want a career change or you're already qualified the checkmirrors family is currently welcoming new driving instructors to the family in the York area.</p>
+      <div class="card text-white bg-primary mb-3">
+        <div class="card-body">
+         <p class="card-text">Call Sarah on <a href="tel:07821291783" role="button">07821 291 783</a> to get started today!</p>
+        </div>
+      </div>
     </div>
   </div>
 </section>
